# simple-tg-backup

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: archive_target.py  archiver.py  config.py  emergency_backup.py  import_json_files.py  main.py  media_downloader.py
scripts/database/: abstract_database.py  chat_database.py  chat_db_migrations.py  chat_schema.sql  core_database.py  core_db_migrations.py  core_schema.sql  migration.py
scripts/models/: abstract_resource.py  admin_event.py  chat.py  message.py
tg_backup/: archive_target.py  archiver.py  backup_target.py  chat_settings_store.py  cli.py  cli_window.py  config.py  dialog_fetcher.py  dl_resource.py  encoding.py  manager.py  media_downloader.py  multi_target_watcher.py  resource_downloader.py  target.py  tg_utils.py  web_server.py
tg_backup/database/: abstract_database.py  chat_database.py  chat_db_migrations.py  chat_migration_005_web_page_media.sql  chat_migration_008_subsystem_queue.sql  chat_schema.sql  core_database.py  core_db_migrations.py  core_migration_002_chat_columns.sql  core_migration_003_archive_runs_table.sql  core_migration_004_dialogs_table.sql  core_migration_006_dialogs_takeout_columns.sql  core_migration_007_archive_run_merge_timers.sql  core_schema.sql  migration.py
tg_backup/menus/: astract_menu.py  main_menu.py
tg_backup/models/: abstract_resource.py  admin_event.py  archive_run_record.py  chat.py  dialog.py  message.py  sticker.py  sticker_set.py  subsystem_queue_entry.py  user.py  web_page_media.py
tg_backup/subsystems/: abstract_subsystem.py  media_downloader.py  (+4 more)
(+20 files in other folders)
