[tool.poetry]
name = "tg_backup"
version = "0.1.0"
description = "A simple attempt to backup telegram chats and data"
authors = ["Roselyn Coales <roselyn@coales.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.29.3"
tqdm = "^4.66.1"
cryptg = "^0.4.0"
isodate = "^0.6.1"
croniter = "^1.4.1"
python-dateutil = "^2.8.2"
prometheus-client = "^0.17.1"
click = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
